--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,33 +7,55 @@ body {
 h1{
   margin-left: 350px;
 }
+p{
+
+  float: left;
+  width:  40em;
+  height: 10em;
+}
 #wrapper{
-  background-color: #ffff;
-  height: 180px;
+  background-color: #dddd;
+  float: left;
+  height: 20px;
   margin: 0 auto;
-  width: 800px;
+  width: 200px;
 }
 #primero{
   background-color: #ddd;
   box-shadow: 0 0 20px rgba(0,0,0.03);
   float: left;
   width:  50em;
-  height: 30em;
+  height: 15em;
   padding: 50px;
   margin-left: 20px;
   margin-top: 20px;
-  width: 200px;
+  width: 150px;
 }
 
-img{
+#imagen1{
   float: right;
   width:  20em;
-  height: 5em;
-  margin-left: 50px;
+  height: 10em;
+  margin-left: 150px;
   margin-top: 20px;
   padding: 20px;
 }
+#ivideo1{
+  float: left;
+  width:  20em;
+  height: 10em;
+}
+#ivideo2{
+  float: left;
+  width:  20em;
+  height: 10em;
+}
 h2{
+  margin-top: 220px;
+  margin-left: 200px;
+}
+ul{
+  margin-top: 50px;
   float: right;
-  margin-right: 350px;
+  margin-right: 60px;
 }
